28Jun99=======================================================================
1. console.pl now works with history and editting.
27Jun99=======================================================================
1. added WWV filtering
2. added timeouts to for forwarding Messages, also added a waiting time for
failed (stalled) outgoing messages.
3. Incoming messages will now have priority over outgoing messages to the
same node.
4. Added 'catchup' command which will 'catchup' messages to date for a node. 
This means that when you start forwarding to a node, it doesn't get all the
messages queued up that are probably old.
5. added 'uncatchup' which does the opposite of the above.
6. fixed kill full and PC49 handling so that it actually works.
7. Fixed local aliases so they add to the front of the standard ones. This
means you only need to add your specials or override the system ones you need
to.
21Jun99=======================================================================
1. changed regex for cluster->client msgs so that strings like |---| are no
longer ignored.
20Jun99=======================================================================
1. prevented a merge to myself (causes a loop)
18Jun99=======================================================================
1. fixed a problem with DXLogPrint repeating log entries.
2. altered the permissions on disconnnect so that priv 5 users can disconnect
clusters, but still require priv 8 to disconnect users.
3. made sure that an incoming PC18 clears out all the cluster info for
that channel before re-initialising.
4. add init command.
5. disconnect users before nodess on shutdown
15Jun99=======================================================================
1. added grepdbg program (so you can search your debug files and get times
and dates of incidents).
2. Moved DXVars.pm to DXVars.pm.issue to force new users to cp it to their
local directory.
3. added $allowzero to DXProt to allow thru PC19s with zero protocol versions.